--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,8 @@
   "description": "Myapp Server built using node, express",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack-cli --config webpack/webpack.dev.js",
-    "start": "npm run build && nodemon dist/main.js",
-    "dev": "webpack-dev-server --open --config webpack/webpack.dev.js",
-    "test": "jest --config jest.config.json"
+    "start": "nodemon --exec babel-node ./src/index.js",
+    "dev": "nodemon --exec babel-node ./src/index.js"
   },
   "author": "Sujay Kundu",
   "repository": "https://github.com/sujaykundu777/mern-docker",
@@ -30,23 +28,15 @@
     "path-browserify": "^1.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.1.1",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.5.0",
     "util": "^0.12.3",
     "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@webpack-cli/init": "^1.0.3",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "css-loader": "^5.0.1",
-    "html-webpack-plugin": "^4.5.0",
-    "mini-css-extract-plugin": "^1.3.3",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1",
-    "webpack-node-externals": "^2.5.2"
+    "@babel/core": "^7.18.6",
+    "@babel/node": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "nodemon": "^2.0.19"
   }
 }
